sample/ingress-controller-tls/deployment-app-two.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-two
  labels:
    app: nginx-two
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-two
  template:
    metadata:
      labels:
        app: nginx-two
    spec:
      containers:
      - image: nginx
        name: nginx
        volumeMounts:
        - name: secrets-store-inline
          mountPath: "/mnt/secrets-store"
          readOnly: true
      volumes:
        - name: secrets-store-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "azure-tls"
            nodePublishSecretRef:
              name: secrets-store-creds
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-two
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: nginx-two
