sample/ingress-controller-tls/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-tls
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
  - hosts:
    - demo.test.com
    secretName: ingress-tls-csi
  rules:
  - host: demo.test.com
    http:
      paths:
      - backend:
          serviceName: nginx-one
          servicePort: 80
        path: /(.*)
      - backend:
          serviceName: nginx-two
          servicePort: 80
        path: /two(/|$)(.*)
